# fullstack-engineer-ai-content-workflow-challenge

./: .env  .env.docker.example  .env.example  .gitignore  .pre-commit-config.yaml  .prettierignore  .prettierrc.js  AGENTS.md  IMPLEMENTATION_PLAN.md  LICENSE  README.md  WALKTHROUGH.txt  agents.md  compose.dev.yml  compose.yml  docker-compose.yml  eslint.config.mjs  package-lock.json  package.json  pnpm-lock.yaml  spec-v1.md  tsconfig.json  turbo.json
backend/: .dockerignore  .env.example  .eslintrc.json  .gitignore  Dockerfile  README.md  alembic.ini  eslint.config.mjs  jest.config.js  jest.config.ts  package-lock.json  package.json  pyproject.toml  requirements.txt  ruff.toml  tsconfig.build.json  tsconfig.json
backend/alembic/: env.py
backend/alembic/versions/: 20260427_dff167946cbf_initial_schema.py
backend/migrations/: 001_init.sql  002_content_piece_languages_optional.sql  003_ai_suggestion_translation_fields.sql  004_ai_provider_settings.sql
backend/prisma/: schema.prisma  seed.ts
backend/prisma/migrations/: 001_init.sql
backend/scripts/: seed-data.ts  seed.py  start.sh
backend/src/: ai.py  ai_orchestrator.py  app.module.ts  config.py  database.py  main.py  main.ts  models.py  schemas.py  status-enum.ts
backend/src/ai/: ai-generation.service.ts  ai-invoke.service.ts  ai-model-catalog.service.ts  ai.controller.spec.ts  ai.controller.ts  ai.dto.ts  ai.module.ts  ai.service.spec.ts  ai.service.ts  ai.types.ts  content-workflow.spec.ts  content-workflow.ts  costs.py  langchain.service.spec.ts  langchain.service.ts  model-factory.service.ts  model-factory.spec.ts  model.factory.ts  observability.py  prompts.ts  review-decision.enum.ts
backend/src/api/: deps.py  errors.py  pagination.py
backend/src/app/: config.py  dev.py  main.py  seed_demo.py
backend/src/auth/: auth.controller.ts  auth.dto.ts  auth.module.ts  auth.service.spec.ts  auth.service.ts  jwt.strategy.ts
backend/src/cache/: cache.service.ts
backend/src/campaign/: campaign.controller.ts  campaign.entity.ts  campaign.module.ts  campaign.service.ts
backend/test/: campaigns.e2e-spec.ts  test_api.py  track.resolver.setTrackSong.spec.ts
backend/tests/: conftest.py  factories.py  test_ai_service.py  test_api.py  test_application_serializers.py  test_config.py  test_review_domain.py
(+767 files in other folders)
