[project]
name = "ai-content-workflow-backend"
version = "0.1.0"
description = "FastAPI backend for the AI content workflow challenge"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "asyncpg>=0.30.0",
  "fastapi>=0.116.1",
  "greenlet>=3.2.4",
  "httpx>=0.28.1",
  "openai>=1.79.0",
  "pydantic-settings>=2.10.1",
  "sqlalchemy>=2.0.43",
  "uvicorn[standard]>=0.35.0"
]

[dependency-groups]
dev = [
  "aiosqlite>=0.21.0",
  "pytest>=8.4.1",
  "pytest-asyncio>=1.1.0"
]

[tool.pytest.ini_options]
pythonpath = ["src"]
asyncio_mode = "auto"
