[project]
name = "acme-content-backend"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "fastapi==0.136.1",
    "uvicorn[standard]>=0.39.0",
    "pydantic==2.13.3",
    "pydantic-settings==2.14.0",
    "sqlalchemy[asyncio]==2.0.49",
    "asyncpg>=0.30.0",
    "alembic==1.18.4",
    "httpx>=0.28.0",
    "structlog>=25.1.0",
    "anthropic==0.97.0",
    "openai==2.32.0",
    "langchain==1.2.15",
    "langchain-anthropic==1.4.1",
    "langchain-openai==1.2.1",
    "langgraph==1.1.9",
    "langgraph-checkpoint-postgres==3.0.5",
]

[dependency-groups]
dev = [
    "pytest>=8.4.0",
    "pytest-asyncio>=0.25.0",
    "pytest-cov>=6.0.0",
    "ruff>=0.15.0",
    "mypy>=1.13.0",
]

[tool.uv]
package = false

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
